[gd_scene load_steps=50 format=2]

[ext_resource path="res://misc/button_style.tres" type="StyleBox" id=1]
[ext_resource path="res://images/ui_circle.png" type="Texture" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]
[ext_resource path="res://images/mmo_health_empty.png" type="Texture" id=4]
[ext_resource path="res://images/character_roundRed.png" type="Texture" id=5]
[ext_resource path="res://images/mmo_health_full.png" type="Texture" id=6]
[ext_resource path="res://misc/font_resource.tres" type="DynamicFont" id=7]
[ext_resource path="res://scripts/regen_scrollbar.gd" type="Script" id=8]
[ext_resource path="res://images/tile_heart.png" type="Texture" id=9]
[ext_resource path="res://scripts/arpg_health.gd" type="Script" id=10]
[ext_resource path="res://scripts/mmo_health.gd" type="Script" id=11]
[ext_resource path="res://scripts/sandbox_health.gd" type="Script" id=12]
[ext_resource path="res://scripts/made_by_reuty.gd" type="Script" id=13]
[ext_resource path="res://images/mmo_profile.png" type="Texture" id=14]
[ext_resource path="res://scripts/degen_scrollbar.gd" type="Script" id=15]
[ext_resource path="res://scripts/consumable_strength.gd" type="Script" id=16]
[ext_resource path="res://scripts/mmo_health_label.gd" type="Script" id=17]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://images/background_cloudB.png" type="Texture" id=19]
[ext_resource path="res://images/background_cloudA.png" type="Texture" id=20]
[ext_resource path="res://images/duck_yellow.png" type="Texture" id=21]

[sub_resource type="CircleShape2D" id=1]
radius = 41.791

[sub_resource type="StreamTexture" id=2]
flags = 6
load_path = "res://.import/tile_heart.png-c9183e8fd16dcaa49ec88ad84ff9bd0d.stex"

[sub_resource type="StreamTexture" id=3]
flags = 6
load_path = "res://.import/tile_heart.png-c9183e8fd16dcaa49ec88ad84ff9bd0d.stex"

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.486275, 0.819608, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFontData" id=5]
font_path = "res://KOMTITP_.ttf"

[sub_resource type="DynamicFont" id=6]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://KOMTITP_.ttf"

[sub_resource type="DynamicFont" id=8]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.823529, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=10]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 2
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 1, 0.286275, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=12]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 3
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.905882, 0.603922, 0.0235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 0.137255, 0.137255, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=16]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=17]
size = 9
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 7 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="DynamicFontData" id=19]
font_path = "res://KOMTITP_.ttf"

[sub_resource type="DynamicFont" id=20]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 19 )

[sub_resource type="StyleBoxFlat" id=21]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0196078, 0.658824, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="Theme" id=23]

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=28]
size = 11
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 18 )

[node name="world" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="player" type="Area2D" parent="."]
position = Vector2( -160, 0 )
script = ExtResource( 3 )

[node name="player_shape" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )

[node name="drinking_progress" type="TextureProgress" parent="player"]
visible = false
modulate = Color( 1, 0.905882, 0.270588, 1 )
margin_left = 40.0
margin_top = -24.0
margin_right = 113.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
value = 25.0
texture_progress = SubResource( 2 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="painkiller_progress" type="TextureProgress" parent="player"]
visible = false
margin_left = 40.0
margin_top = -24.0
margin_right = 113.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
value = 25.0
texture_progress = SubResource( 3 )
fill_mode = 4
tint_progress = Color( 1, 0.45098, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bandage_progress" type="TextureProgress" parent="player"]
visible = false
modulate = Color( 0.207843, 0.721569, 1, 1 )
margin_left = 40.0
margin_top = -24.0
margin_right = 113.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
value = 25.0
texture_progress = ExtResource( 9 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="medkit_progress" type="TextureProgress" parent="player"]
visible = false
modulate = Color( 0.772549, 0.207843, 1, 1 )
margin_left = 40.0
margin_top = -24.0
margin_right = 113.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
value = 25.0
texture_progress = ExtResource( 9 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="player"]
scale = Vector2( 0.695203, 0.695203 )
texture = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="button_panel" type="PanelContainer" parent="HUD"]
use_parent_material = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -243.0
margin_right = -58.0
margin_bottom = 243.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/button_panel"]
margin_top = 33.0
margin_right = 318.0
margin_bottom = 452.0
size_flags_vertical = 4
custom_constants/separation = 11

[node name="healing_title" type="Label" parent="HUD/button_panel/VBoxContainer"]
margin_right = 318.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 7 )
text = "Heal Player"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/button_panel/VBoxContainer"]
margin_left = 13.0
margin_top = 38.0
margin_right = 305.0
margin_bottom = 63.0
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="energy_drink" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Energy Drink"

[node name="painkiller" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 292.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Painkillers"

[node name="HBoxContainer6" type="HBoxContainer" parent="HUD/button_panel/VBoxContainer"]
margin_left = 25.0
margin_top = 74.0
margin_right = 293.0
margin_bottom = 99.0
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="strength_title" type="Label" parent="HUD/button_panel/VBoxContainer/HBoxContainer6"]
margin_top = 2.0
margin_right = 177.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 8 )
text = "consumable strength:"
align = 1

[node name="nerf_consumable" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer6"]
margin_left = 189.0
margin_right = 213.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = " -"

[node name="strength" type="Label" parent="HUD/button_panel/VBoxContainer/HBoxContainer6"]
margin_left = 225.0
margin_top = 2.0
margin_right = 232.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 8 )
text = "5"
align = 1
script = ExtResource( 16 )

[node name="buff_consumable" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer6"]
margin_left = 244.0
margin_right = 268.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = " +"

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/button_panel/VBoxContainer"]
margin_left = 13.0
margin_top = 110.0
margin_right = 305.0
margin_bottom = 135.0
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="bandage" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer2"]
margin_right = 140.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "bandage"

[node name="medkit" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer2"]
margin_left = 152.0
margin_right = 292.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "medkit"

[node name="HBoxContainer3" type="HBoxContainer" parent="HUD/button_panel/VBoxContainer"]
margin_left = 13.0
margin_top = 146.0
margin_right = 305.0
margin_bottom = 171.0
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="flash_heal" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer3"]
margin_right = 140.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Flash heal"

[node name="lay_on_hands" type="Button" parent="HUD/button_panel/VBoxContainer/HBoxContainer3"]
margin_left = 152.0
margin_right = 292.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Lay on hands"

[node name="regen_title" type="Label" parent="HUD/button_panel/VBoxContainer"]
margin_top = 182.0
margin_right = 318.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 13 )
text = "passive Regeneration: 0"
align = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="HUD/button_panel/VBoxContainer"]
margin_top = 214.0
margin_right = 318.0
margin_bottom = 230.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 16 )
custom_constants/separation = 12
alignment = 1

[node name="regen_scrollbar" type="HScrollBar" parent="HUD/button_panel/VBoxContainer/HBoxContainer4"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 16.0
rect_min_size = Vector2( 260, 16 )
size_flags_horizontal = 6
size_flags_vertical = 2
max_value = 11.0
step = 1.0
page = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_title" type="Label" parent="HUD/button_panel/VBoxContainer"]
margin_top = 241.0
margin_right = 318.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 7 )
text = "Damage Player"
align = 1

[node name="damage_buttons" type="HBoxContainer" parent="HUD/button_panel/VBoxContainer"]
margin_left = 13.0
margin_top = 279.0
margin_right = 305.0
margin_bottom = 304.0
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="punch" type="Button" parent="HUD/button_panel/VBoxContainer/damage_buttons"]
margin_right = 140.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Punch"

[node name="whack" type="Button" parent="HUD/button_panel/VBoxContainer/damage_buttons"]
margin_left = 152.0
margin_right = 292.0
margin_bottom = 25.0
rect_min_size = Vector2( 140, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "whack"

[node name="degen_title" type="Label" parent="HUD/button_panel/VBoxContainer"]
margin_top = 315.0
margin_right = 318.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 16 )
text = "damage over time: 0"
align = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="HUD/button_panel/VBoxContainer"]
margin_top = 347.0
margin_right = 318.0
margin_bottom = 363.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 16 )
custom_constants/separation = 12
alignment = 1

[node name="degen_scrollbar" type="HScrollBar" parent="HUD/button_panel/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 16.0
rect_min_size = Vector2( 260, 16 )
size_flags_horizontal = 6
size_flags_vertical = 2
max_value = 11.0
step = 1.0
page = 1.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_cloud" type="Sprite" parent="HUD/button_panel/VBoxContainer/HBoxContainer5/degen_scrollbar"]
visible = false
modulate = Color( 0.772549, 0.988235, 0.596078, 0.470588 )
position = Vector2( -508.519, -175.02 )
scale = Vector2( 0.638156, 0.638156 )
texture = ExtResource( 20 )

[node name="right_cloud" type="Sprite" parent="HUD/button_panel/VBoxContainer/HBoxContainer5/degen_scrollbar"]
visible = false
modulate = Color( 0.772549, 0.988235, 0.596078, 0.470588 )
position = Vector2( -142.197, -185.398 )
scale = Vector2( 0.638156, 0.638156 )
texture = ExtResource( 19 )

[node name="background_cloud" type="Sprite" parent="HUD/button_panel/VBoxContainer/HBoxContainer5/degen_scrollbar"]
visible = false
modulate = Color( 0.772549, 0.988235, 0.596078, 0.470588 )
position = Vector2( -405.348, -224.349 )
scale = Vector2( 0.34128, 0.34128 )
texture = ExtResource( 19 )
flip_h = true

[node name="duck_yellow" type="Sprite" parent="HUD/button_panel/VBoxContainer/HBoxContainer5/degen_scrollbar"]
position = Vector2( -277, -109 )
scale = Vector2( 0.250383, 0.250383 )
texture = ExtResource( 21 )

[node name="spacer" type="Label" parent="HUD/button_panel/VBoxContainer"]
margin_top = 374.0
margin_right = 318.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 17 )
align = 2

[node name="made_by_reuty" type="Button" parent="HUD/button_panel/VBoxContainer"]
margin_left = 115.0
margin_top = 401.0
margin_right = 202.0
margin_bottom = 419.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 20 )
enabled_focus_mode = 0
text = "made by reuty"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthbox_outline" type="PanelContainer" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = -244.0
margin_right = 624.0
margin_bottom = 244.0
custom_styles/panel = SubResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moba_health" type="PanelContainer" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 286.0
margin_top = 57.0
margin_right = 410.0
margin_bottom = 69.0
custom_styles/panel = SubResource( 22 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar" type="TextureProgress" parent="HUD/moba_health"]
margin_right = 124.0
margin_bottom = 12.0
step = 0.1
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="overheal_bar" type="TextureProgress" parent="HUD/moba_health"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 124.0
margin_bottom = 12.0
step = 0.1
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="arpg_health" type="PanelContainer" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 88.8655
margin_top = 131.765
margin_right = 184.866
margin_bottom = 227.765
theme = SubResource( 23 )
custom_styles/panel = SubResource( 24 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bowl" type="TextureProgress" parent="HUD/arpg_health"]
modulate = Color( 1, 0.176471, 0.176471, 1 )
margin_right = 96.0005
margin_bottom = 96.0
step = 0.1
value = 100.0
texture_progress = ExtResource( 2 )
fill_mode = 3
nine_patch_stretch = true

[node name="overheal_bowl" type="TextureProgress" parent="HUD/arpg_health"]
modulate = Color( 1, 0.176471, 0.176471, 0.392157 )
margin_right = 96.0005
margin_bottom = 96.0
step = 0.1
texture_progress = ExtResource( 2 )
fill_mode = 3
nine_patch_stretch = true

[node name="sandbox_health" type="PanelContainer" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 232.0
margin_top = 185.286
margin_right = 464.0
margin_bottom = 233.286
custom_styles/panel = SubResource( 25 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="empty_hearts" type="Sprite" parent="HUD/sandbox_health"]
position = Vector2( 6.02783, 20.7583 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 730, 64 )

[node name="hearts_sprite" type="Sprite" parent="HUD/sandbox_health"]
modulate = Color( 1, 0.152941, 0.152941, 1 )
position = Vector2( 6.02783, 20.7583 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 730, 64 )

[node name="mmo_profile" type="PanelContainer" parent="HUD"]
margin_left = 88.0
margin_top = 72.0
margin_right = 346.0
margin_bottom = 144.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/panel = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/mmo_profile"]
margin_right = 258.0
margin_bottom = 58.0
size_flags_vertical = 0
custom_constants/separation = -2
alignment = 2

[node name="character_picture" type="TextureRect" parent="HUD/mmo_profile/HBoxContainer"]
margin_right = 58.0
margin_bottom = 58.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mmo_health" type="PanelContainer" parent="HUD/mmo_profile/HBoxContainer"]
margin_left = 56.0
margin_top = 23.0
margin_right = 258.0
margin_bottom = 35.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 6
custom_styles/panel = SubResource( 27 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_bar" type="TextureProgress" parent="HUD/mmo_profile/HBoxContainer/mmo_health"]
margin_left = 1.0
margin_top = 1.0
margin_right = 201.0
margin_bottom = 11.0
rect_min_size = Vector2( 200, 10 )
size_flags_vertical = 0
step = 0.1
value = 100.0
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="overheal_bar" type="TextureProgress" parent="HUD/mmo_profile/HBoxContainer/mmo_health"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 1.0
margin_top = 1.0
margin_right = 201.0
margin_bottom = 11.0
rect_min_size = Vector2( 200, 10 )
step = 0.1
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="mmo_health_container" type="CanvasLayer" parent="HUD/mmo_profile"]
layer = 2

[node name="mmo_health_label" type="Label" parent="HUD/mmo_profile/mmo_health_container"]
margin_left = 222.967
margin_top = 93.9419
margin_right = 277.967
margin_bottom = 111.942
custom_fonts/font = SubResource( 28 )
text = "100/100"
align = 2
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer/energy_drink" to="player" method="_on_energy_drink_pressed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer/painkiller" to="player" method="_on_painkiller_pressed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer6/nerf_consumable" to="HUD/button_panel/VBoxContainer/HBoxContainer6/strength" method="_on_nerf_consumable_pressed"]
[connection signal="value_changed" from="HUD/button_panel/VBoxContainer/HBoxContainer6/strength" to="player" method="_on_strength_value_changed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer6/buff_consumable" to="HUD/button_panel/VBoxContainer/HBoxContainer6/strength" method="_on_buff_consumable_pressed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer2/bandage" to="player" method="_on_bandage_pressed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer2/medkit" to="player" method="_on_medkit_pressed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer3/flash_heal" to="player" method="_on_flash_heal_pressed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/HBoxContainer3/lay_on_hands" to="player" method="_on_lay_on_hands_pressed"]
[connection signal="value_changed" from="HUD/button_panel/VBoxContainer/HBoxContainer4/regen_scrollbar" to="player" method="_on_regen_scrollbar_value_changed"]
[connection signal="value_changed" from="HUD/button_panel/VBoxContainer/HBoxContainer4/regen_scrollbar" to="HUD/button_panel/VBoxContainer/HBoxContainer4/regen_scrollbar" method="_on_regen_scrollbar_value_changed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/damage_buttons/punch" to="player" method="_on_punch_pressed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/damage_buttons/whack" to="player" method="_on_whack_pressed"]
[connection signal="value_changed" from="HUD/button_panel/VBoxContainer/HBoxContainer5/degen_scrollbar" to="player" method="_on_degen_scrollbar_value_changed"]
[connection signal="value_changed" from="HUD/button_panel/VBoxContainer/HBoxContainer5/degen_scrollbar" to="HUD/button_panel/VBoxContainer/HBoxContainer5/degen_scrollbar" method="_on_degen_scrollbar_value_changed"]
[connection signal="pressed" from="HUD/button_panel/VBoxContainer/made_by_reuty" to="HUD/button_panel/VBoxContainer/made_by_reuty" method="_on_made_by_reuty_pressed"]
[connection signal="mmo_health_changed" from="HUD/mmo_profile/HBoxContainer/mmo_health" to="HUD/mmo_profile/mmo_health_container/mmo_health_label" method="_on_mmo_health_mmo_health_changed"]
